# support-ops-env

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py  test_env.py
env/: __init__.py  environment.py  models.py
env/data/: tickets.json
env/tasks/: __init__.py  classify.py  resolve.py  respond.py
server/: app.py
