[project]
name = "support-ops-env"
version = "1.0.0"
description = "Customer support ticket resolution environment for AI agent training"
authors = [
    {name = "Utkarshnjr"}
]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic>=2.0",
    "openai",
    "python-dotenv",
    "httpx",
    "pyyaml",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"
